--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,9 +4,17 @@
     <TreatWarningsAsErrors Condition="'$(Configuration)' == 'Release'">true</TreatWarningsAsErrors>
     <RepoRoot>$([MSBuild]::EnsureTrailingSlash('$(MSBuildThisFileDirectory)'))</RepoRoot>
     <Nullable>enable</Nullable>
-    <GovUkFrontendVersion>5.2.0</GovUkFrontendVersion>
+<!--    <GovUkFrontendVersion>5.2.0</GovUkFrontendVersion>-->
+<!--    <GovUkFrontendVersion>5.3.0</GovUkFrontendVersion>-->
+<!--    <GovUkFrontendVersion>5.3.1</GovUkFrontendVersion>-->
+<!--    <GovUkFrontendVersion>5.4.0</GovUkFrontendVersion>-->
+<!--    <GovUkFrontendVersion>5.4.1</GovUkFrontendVersion>-->
+<!--    <GovUkFrontendVersion>5.5.0</GovUkFrontendVersion>-->
+<!--    <GovUkFrontendVersion>5.6.0</GovUkFrontendVersion>-->
+<!--    <GovUkFrontendVersion>5.7.0</GovUkFrontendVersion>-->
+    <GovUkFrontendVersion>5.7.1</GovUkFrontendVersion>
 
-    <_NpmLibDirectory>$([MSBuild]::NormalizeDirectory('$(RepoRoot)', 'lib'))</_NpmLibDirectory>
+    <_NpmLibDirectory>$([MSBuild]::NormalizeDirectory('$(RepoRoot)', 'lib', 'govuk-frontend-$(GovUkFrontendVersion)'))</_NpmLibDirectory>
     <_NpmLibVersionFile>$([System.IO.Path]::Combine('$(_NpmLibDirectory)', 'version.txt'))</_NpmLibVersionFile>
     <GovUkFrontendLibrary>$([MSBuild]::NormalizeDirectory('$(_NpmLibDirectory)', 'node_modules', 'govuk-frontend', 'dist', 'govuk'))</GovUkFrontendLibrary>
   </PropertyGroup>
