--- a/src/GovUk.Frontend.AspNetCore.DocSamples/GovUk.Frontend.AspNetCore.DocSamples.csproj
+++ b/src/GovUk.Frontend.AspNetCore.DocSamples/GovUk.Frontend.AspNetCore.DocSamples.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <NoWarn>CS0618</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
