Add liquid template for generating a Label

--- a/src/GovUk.Frontend.AspNetCore/GovUk.Frontend.AspNetCore.csproj
+++ b/src/GovUk.Frontend.AspNetCore/GovUk.Frontend.AspNetCore.csproj
@@ -61,5 +61,9 @@
       <LogicalName>Content/Compiled/%(LinkedName)</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <None Remove="ComponentGeneration\Templates\*.liquid" />
+    <EmbeddedResource Include="ComponentGeneration\Templates\*.liquid" />
+  </ItemGroup>
 </Project>
