--- a/src/GovUk.Frontend.AspNetCore/GovUk.Frontend.AspNetCore.csproj
+++ b/src/GovUk.Frontend.AspNetCore/GovUk.Frontend.AspNetCore.csproj
@@ -31,7 +31,7 @@
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Fluid.Core" Version="2.23.0" />
+    <PackageReference Include="Fluid.Core" Version="[2.15.0,3.0)" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
     <PackageReference Include="MinVer" Version="2.3.1">
       <PrivateAssets>all</PrivateAssets>
@@ -61,10 +61,10 @@
       <LogicalName>Content/Compiled/%(LinkedName)</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
-  
+
   <ItemGroup>
     <None Remove="ComponentGeneration\Templates\*.liquid" />
     <EmbeddedResource Include="ComponentGeneration\Templates\*.liquid" />
   </ItemGroup>
-  
+
 </Project>
