Overhaul of attributes to finally fix encoding
There's still a few places to fix up, notably TagHelperAdapter.

--- a/tests/GovUk.Frontend.AspNetCore.IntegrationTests/GovUk.Frontend.AspNetCore.IntegrationTests.csproj
+++ b/tests/GovUk.Frontend.AspNetCore.IntegrationTests/GovUk.Frontend.AspNetCore.IntegrationTests.csproj
@@ -23,4 +23,10 @@
     <ProjectReference Include="..\GovUk.FrontEnd.AspNetCore.TestCommon\GovUk.FrontEnd.AspNetCore.TestCommon.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="EncodingTests\BackLink\ExpressionHref.cshtml" />
+    <_ContentIncludedByDefault Remove="EncodingTests\BackLink\GeneratedHref.cshtml" />
+    <_ContentIncludedByDefault Remove="EncodingTests\BackLink\StringHref.cshtml" />
+  </ItemGroup>
+
 </Project>
