--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
           dotnet-version: |
             8.0.x
 
+      - name: Install tools
+        run: just install-tools
+
       - name: Restore
         run: just restore
 
