Add TestCommon to GlobalUsings in test projects

--- a/tests/GovUk.Frontend.AspNetCore.IntegrationTests/GovUk.Frontend.AspNetCore.IntegrationTests.csproj
+++ b/tests/GovUk.Frontend.AspNetCore.IntegrationTests/GovUk.Frontend.AspNetCore.IntegrationTests.csproj
@@ -29,4 +29,8 @@
     <_ContentIncludedByDefault Remove="EncodingTests\BackLink\StringHref.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Using Include="GovUk.Frontend.AspNetCore.TestCommon" />
+  </ItemGroup>
+
 </Project>
