--- a/src/GovUk.Frontend.AspNetCore/GovUk.Frontend.AspNetCore.csproj
+++ b/src/GovUk.Frontend.AspNetCore/GovUk.Frontend.AspNetCore.csproj
@@ -43,7 +43,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="SoftCircuits.HtmlMonkey" Version="3.0.0" />
+    <PackageReference Include="SoftCircuits.HtmlMonkey" Version="[3.0.0,]" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
