Tidy up extension methods that deal with IHtmlContent

--- a/tests/GovUk.Frontend.AspNetCore.ConformanceTests/GovUk.Frontend.AspNetCore.ConformanceTests.csproj
+++ b/tests/GovUk.Frontend.AspNetCore.ConformanceTests/GovUk.Frontend.AspNetCore.ConformanceTests.csproj
@@ -34,4 +34,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Using Include="GovUk.Frontend.AspNetCore.TestCommon" />
+  </ItemGroup>
+
 </Project>
