--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
 
     name: "Build ${{ matrix.os }}"
     runs-on: ${{ matrix.os }}
+    env:
+      DOTNET_CLI_WORKLOAD_UPDATE_NOTIFY_DISABLE: true
 
     steps:
       - uses: actions/checkout@v2
