Host compiled assets at the root with version in path
This removes the need for the version fingerprint query parameter.
Also fixes an issue with the JS module import where we'd missed that parameter.

--- a/.editorconfig
+++ b/.editorconfig
@@ -17,7 +17,7 @@ resharper_redundant_empty_object_creation_argument_list_highlighting = none
 [*.{xml,config,*proj,nuspec,props,resx,targets,yml,tasks}]
 indent_size = 2
 
-[*.{props,targets,ruleset,config,nuspec,resx,vsixmanifest,vsct}]
+[*.{csproj,props,targets,ruleset,config,nuspec,resx,vsixmanifest,vsct}]
 indent_size = 2
 
 [*.json]
